Add a few opid
